# status

./: Cargo.toml  pipe_registry.toml  run.bash  server_list.toml  test_pipe.txt
pipe_configs/: co_reg_status.toml  diffusion_calc_nlsam_status.toml
src/: args.rs  client.rs  lib.rs  main.rs  notes.txt  pipe.rs  pipe_registry.rs  pipe_status.rs  remote_system.rs  server.rs  stage.rs  status_check.rs
work/: pipe_cfg.json
