[package]
name = "status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5"
serde_json = "1.0.87"
glob = "0.3.0"
clap = { version = "3.2.23", features = ["derive"] }
serde_regex = "1.1.0"
utils = {path = "/Users/Wyatt/IdeaProjects/civm_scan/utils"}
ssh-rs = "0.3.2"
pathsearch = "0.2.0"
hostname = "0.3.1"
rand = "0.8.5"
ssh_config = "0.1.0"
